--- a/JB2/index.html
+++ b/JB2/index.html
@@ -1,14 +1,12 @@
+<!DOCTYPE html>
 <html>
 <head>
-    <title>Margin CSS</title>
-    <link rel="stylesheet" type="text/css" href="styleMargin.css">
+    <title>latihan Margin</title>
+    <link rel="stylesheet" type="text/css" href="style1.css">
 </head>
 <body>
-    <div class="box">
-        <h1>Ini adalah box</h1>
-    </div>
-    <div class="box-dua">
-        <h1>Ini adalah box dua</h1>
-    </div>
+    <div class="satu">1</div>
+    <div class="dua">2</div>
+    <div class="tiga">3</div>
 </body>
 </html>
