--- a/JB6/effect.html
+++ b/JB6/effect.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="style_effect.css"/>
+    <link rel="stylesheet" type="text/css" href="styleEffect.css"/>
     <script src="jquery-3.7.1.js"></script>
 
     <script>
